--- a/index.html
+++ b/index.html
@@ -7,14 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    <label for="">Max Number</label>
-    <input type="number" id="max">
-    <button id="mySubmit">Submit</button>
-    <label for="">Min Number</label>
-    <input type="number" id="min">
-    <button id="mySubmit">Submit</button>
-    <label id="myLable"></label>
-    <button id="myButton">roll</button>
+    <div class="input">
+        <div class="max card">
+            <label>Max Number</label>
+            <input type="text" id="max">
+        </div>
+        <div class="min card">
+            <label>Min Number</label>
+            <input type="text" id="min">
+        </div>
+    </div>
+    <div class="roll">
+        <label id="myLable"></label>
+        <button id="myButton">roll</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
